--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,12 @@
 # Auto detect text files and perform LF normalization
 * text eol=lf
+
+# Explicitly declare text files you want to always be normalized and converted
+# to native line endings on checkout.
+*.js text
+*.md text
+*.txt text
+
+# Denote all files that are truly binary and should not be modified.
+*.png binary
+*.jpg binary
