--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,16 @@
 # Auto detect text files and perform LF normalization
-* text eol=lf
+* text=auto eol=lf
 
 # Explicitly declare text files you want to always be normalized and converted
 # to native line endings on checkout.
-*.js text
+*.css text filter=tabspace
+*.js text filter=tabspace
+*.html text filter=tabspace
 *.md text
 *.txt text
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
+*.gif binary
+*.ico binary
