--- a/.gitattributes
+++ b/.gitattributes
@@ -3,9 +3,9 @@
 
 # Explicitly declare text files you want to always be normalized and converted
 # to native line endings on checkout.
-*.css text filter=tabspace
-*.js text filter=tabspace
-*.html text filter=tabspace
+*.css text
+*.js text
+*.html text
 *.md text
 *.txt text
 
